# misc

./: CMakeLists.txt  README.rst  common.h  extension.h  find2_index_approx_extension.h  find2_index_approx_extensionTMP.h  merge.cpp  modify.cpp  my_project.cpp  oss_context.h  sample.cpp  selectRandom.cpp  split.cpp  testITV.cpp  testITV_old.cpp  testOSSAlignments.cpp  testOSSAlignments2.cpp  testing bit and bitvectors
bashscripts/: benchmark_f2.sh  benchmark_hamming.sh  benchmark_v2.sh
save/: test.bam  test.sam
